force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ActionsColumnPosition__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionsColumnPosition__c</fullName>
    <description>The position of the actions column in the cart page. Actions column are displayed on the left, but may be overridden using this setting.</description>
    <inlineHelpText>The position of the actions column in the cart page. 

Valid values are: 
============= 
Left 
Right</inlineHelpText>
    <label>Actions Column Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>