force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__AlertInclude__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AlertInclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to display radio buttons for Renew, Increment, Amend, Cancel asset actions.</description>
    <inlineHelpText>Check it to display radio buttons for  Renew, Increment, Amend, Cancel asset actions.</inlineHelpText>
    <label>Show Radio Buttons for Asset</label>
    <type>Checkbox</type>
</CustomField>