force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__AlertSelectedExclude__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AlertSelectedExclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defer constraint check on option selection. Constraint check is done on GoToPricing or other page button click events.</description>
    <inlineHelpText>Check to defer constraint check on option selection. Constraint check is done on GoToPricing or other page button click events.</inlineHelpText>
    <label>Defer Constraint on Option Selection</label>
    <type>Checkbox</type>
</CustomField>