force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__AutoExecutePostPricingStep__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AutoExecutePostPricingStep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether post-pricing step should be executed automatically after pricing. Only applicable when after pricing is enabled by the pricing extension callback.</description>
    <inlineHelpText>Indicates whether post-pricing step should be executed automatically after pricing. Only applicable when after pricing is enabled by the pricing extension callback.</inlineHelpText>
    <label>Auto Execute Post-Pricing Step</label>
    <type>Checkbox</type>
</CustomField>