force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__AutoSyncOnCartApproval__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AutoSyncOnCartApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the cart is auto synchronized when the cart is approved and ready for finalization.</description>
    <inlineHelpText>Indicates whether the cart is auto synchronized when the cart is approved and ready for finalization.</inlineHelpText>
    <label>Auto Sync On Cart Approval</label>
    <type>Checkbox</type>
</CustomField>