force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__AutoUpdateCategoryView__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AutoUpdateCategoryView__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether auto incremental updates to category view are enabled</description>
    <inlineHelpText>Indicates whether auto incremental updates to category view are enabled</inlineHelpText>
    <label>Auto Update Category View</label>
    <type>Checkbox</type>
</CustomField>