force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__BypassShoppingCart__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BypassShoppingCart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the Shopping Cart page will be bypassed.</description>
    <inlineHelpText>A global setting to bypass the shopping cart.</inlineHelpText>
    <label>Bypass Shopping Cart</label>
    <type>Checkbox</type>
</CustomField>