force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CalcNetAdjPercentBeforeRounding__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CalcNetAdjPercentBeforeRounding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether net adjustment percent should be calculated before rounding the net price</description>
    <inlineHelpText>Indicates whether net adjustment percent should be calculated before rounding the net price</inlineHelpText>
    <label>Calc Net Adj Percent Before Rounding</label>
    <type>Checkbox</type>
</CustomField>