force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CartLineItemsUpdateChunkSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CartLineItemsUpdateChunkSize__c</fullName>
    <description>The cart line items update chunk size. The default value is 100. The SFDC governor limit affects the chunk size.</description>
    <inlineHelpText>The cart line items update chunk size. The default value is 100. The SFDC governor limit affects the chunk size.</inlineHelpText>
    <label>Cart Line Items Update Chunk Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>