force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CartTheme__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CartTheme__c</fullName>
    <defaultValue>&quot;Classic&quot;</defaultValue>
    <description>Indicates the theme used in the cart pages</description>
    <inlineHelpText>Indicates the theme used in the cart pages 

Valid values(default = &quot;Classic&quot;): 
======================== 
Classic 
Nova</inlineHelpText>
    <label>Cart Theme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>