force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CascadeSharedAttributeUpdates__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CascadeSharedAttributeUpdates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether updates to shared bundle attributes are cascaded to options in the bundle</description>
    <inlineHelpText>Indicates whether updates to shared bundle attributes are cascaded to options in the bundle</inlineHelpText>
    <label>Cascade Shared Attribute Updates</label>
    <type>Checkbox</type>
</CustomField>