force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CleanupInvalidRulePrompt__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CleanupInvalidRulePrompt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable removal of line items promted by currently invalid rules.</description>
    <inlineHelpText>Enable removal of line items prompted by currently invalid rules.</inlineHelpText>
    <label>Cleanup Invalid Rule Prompt</label>
    <type>Checkbox</type>
</CustomField>