force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CMSUrl__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CMSUrl__c</fullName>
    <description>CMS Endpoint URL</description>
    <inlineHelpText>CMS Endpoint URL.</inlineHelpText>
    <label>CMS Endpoint URL</label>
    <length>128</length>
    <type>Text</type>
</CustomField>