force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ComputeTotalsInSeparateStep__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ComputeTotalsInSeparateStep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether totaling should be performed in a separate step or combined with the base pricing step</description>
    <inlineHelpText>Indicates whether totaling should be performed in a separate step or combined with the base pricing step</inlineHelpText>
    <label>Compute Totals In Separate Step</label>
    <type>Checkbox</type>
</CustomField>