force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CRMaintenanceGovernorLimitsThreshold__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CRMaintenanceGovernorLimitsThreshold__c</fullName>
    <description>The percentage of governor limit to be used as a threshold for constraint rule maintenance job. By default, the threshold will be 100% of the governor limit.</description>
    <inlineHelpText>The percentage of governor limit to be used as a threshold for constraint rule maintenance job. By default, the threshold will be 100% of the governor limit.</inlineHelpText>
    <label>CR Maintenance Governor Limits Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>