force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CSSOverride__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CSSOverride__c</fullName>
    <description>Name of the static resource to override CSS in catalog, cart, attribute and options pages</description>
    <inlineHelpText>Name of the static resource to override CSS in catalog, cart, attribute and options pages</inlineHelpText>
    <label>CSS Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>