force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CurrencyFieldPrecision__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CurrencyFieldPrecision__c</fullName>
    <description>Holds the number of decimal places for the currency fields.
(used by the formatfields function)</description>
    <label>Currency Field Precision</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>