force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CustomAssetActionLabelName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomAssetActionLabelName__c</fullName>
    <description>The name of the custom label for the asset action.</description>
    <inlineHelpText>The name of the custom label for the asset action.</inlineHelpText>
    <label>Custom Asset Action Label Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>