force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CustomDealGuidancePage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomDealGuidancePage__c</fullName>
    <label>Custom Deal Guidance Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>