force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CustomOptionAttributePage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomOptionAttributePage__c</fullName>
    <description>The name of the custom attributes page associated with ConfigureBundle and SelectConfigOptionsDetailView pages</description>
    <inlineHelpText>The name of the custom attributes page associated with ConfigureBundle and SelectConfigOptionsDetailView pages</inlineHelpText>
    <label>Custom Option Attribute Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>