force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CustomPrePricingFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomPrePricingFields__c</fullName>
    <description>Enter the list of custom fields from the line item object that determine the pre-pricing indicator</description>
    <inlineHelpText>Enter the list of custom fields from the line item object that determine the pre-pricing indicator</inlineHelpText>
    <label>Custom Pre-Pricing Fields</label>
    <type>TextArea</type>
</CustomField>