force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__CustomPricingFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomPricingFields__c</fullName>
    <description>Enter the list of custom fields from the line item object used in pricing</description>
    <inlineHelpText>Enter the list of custom fields from the line item object used in pricing</inlineHelpText>
    <label>Custom Pricing Fields</label>
    <type>TextArea</type>
</CustomField>