force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__DefaultAssetPricingIndicator__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultAssetPricingIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether asset pricing is enabled by default for asset related line items</description>
    <inlineHelpText>Indicates whether asset pricing is enabled by default for asset related line items</inlineHelpText>
    <label>Default Asset Pricing Indicator ?</label>
    <type>Checkbox</type>
</CustomField>