force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__DefaultProductsPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultProductsPage__c</fullName>
    <description>The product selection page.</description>
    <inlineHelpText>Specify the product selection page to be displayed. 
Valid values are:
-----------------------
SelectConfigProducts
SelectConfigProductsFilterView</inlineHelpText>
    <label>Default Catalog Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>