force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__DeferPricingUntilCart__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DeferPricingUntilCart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to defer pricing until the user clicks on a pricing action. .</description>
    <inlineHelpText>Indicator to defer pricing until the user clicks on a pricing action.</inlineHelpText>
    <label>Defer Pricing</label>
    <type>Checkbox</type>
</CustomField>