force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__DirectConfigureAssetActions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DirectConfigureAssetActions__c</fullName>
    <description>Comma separated list of asset actions which will configure products directly.</description>
    <inlineHelpText>Comma separated values of Increment, Amend, Renew, Cancel actions. Listed actions will configure products directly.</inlineHelpText>
    <label>Direct Configure Asset Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>