force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__DisableChargeTypeTotaling__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisableChargeTypeTotaling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether charge type totaling is disabled</description>
    <inlineHelpText>Indicates whether charge type totaling is disabled</inlineHelpText>
    <label>Disable Charge Type Totaling</label>
    <type>Checkbox</type>
</CustomField>