force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__DisableConstraintRules__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisableConstraintRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether constraint rules are disabled</description>
    <inlineHelpText>A global setting to turn off constraint rules.</inlineHelpText>
    <label>Disable Constraint Rules</label>
    <type>Checkbox</type>
</CustomField>