force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__DisableExistingAssetPricing__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisableExistingAssetPricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether existing asset pricing is disabled.</description>
    <inlineHelpText>Indicates whether existing asset pricing is disabled. If disabled,,prices of existing assets are not rolled up.</inlineHelpText>
    <label>Disable Existing Asset Pricing</label>
    <type>Checkbox</type>
</CustomField>