force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__DisablePricingQueryOptimization__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisablePricingQueryOptimization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to disable pricing query optimization for carts under the large cart threshold. By default fewer fields are retrieved for line items in the cart to optimize the heap. This indicator is used to disable the optimization to support customization.</description>
    <inlineHelpText>Indicator to disable pricing query optimization for carts under the large cart threshold. By default fewer fields are retrieved for line items in the cart to optimize the heap. This indicator is used to disable the optimization to support customization.</inlineHelpText>
    <label>Disable Pricing Query Optimization</label>
    <type>Checkbox</type>
</CustomField>