force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__DisplayCartActionsAsDropdown__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisplayCartActionsAsDropdown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display action buttons inside a drop down menu</description>
    <inlineHelpText>Display action buttons inside a drop down menu</inlineHelpText>
    <label>Display Cart Actions As Dropdown</label>
    <type>Checkbox</type>
</CustomField>