force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableAdjustmentSpread__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableAdjustmentSpread__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether adjustments provided for summary groups and bundles may be spread to child line items that roll into them. Only applicable when multiple adjustments are disabled.</description>
    <inlineHelpText>Indicates whether adjustments provided for summary groups and bundles may be spread to child line items that roll into them. Only applicable when multiple adjustments are disabled.</inlineHelpText>
    <label>Enable Adjustment Spread</label>
    <type>Checkbox</type>
</CustomField>