force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableAggregatePricing__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableAggregatePricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether aggregate pricing is enabled</description>
    <inlineHelpText>A global setting to enable aggregate price rules.</inlineHelpText>
    <label>Enable Aggregate Pricing</label>
    <type>Checkbox</type>
</CustomField>