force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableAutoReprice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableAutoReprice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether auto reprice is enabled.</description>
    <inlineHelpText>A global setting to automatically reprice the cart when a price component is modified.</inlineHelpText>
    <label>Enable Auto Reprice</label>
    <type>Checkbox</type>
</CustomField>