force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableBasePriceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableBasePriceAdjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether base price adjustment is allowed. When enabled Base Price Override is considered when calculating the net price adjustment  %.</description>
    <inlineHelpText>Indicates whether base price adjustment is allowed. When enabled Base Price Override is considered when calculating the net price adjustment  %.</inlineHelpText>
    <label>Enable Base Price Adjustment</label>
    <type>Checkbox</type>
</CustomField>