force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableCartLockingForConcurrentAccess__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableCartLockingForConcurrentAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to specify whether cart locking for concurrent access to cart is enabled</description>
    <inlineHelpText>Boolean flag to specify whether cart locking for concurrent access to cart is enabled</inlineHelpText>
    <label>Enable CartLocking for Concurrent Access</label>
    <type>Checkbox</type>
</CustomField>