force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableContextualTotals__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableContextualTotals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show totals below line items</description>
    <label>Enable Contextual Totals</label>
    <type>Checkbox</type>
</CustomField>