force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableDefaultingForOptions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableDefaultingForOptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether defaulting is enabled for options</description>
    <inlineHelpText>A global setting to enable option defaulting rules.</inlineHelpText>
    <label>Enable Defaulting For Options(D)</label>
    <type>Checkbox</type>
</CustomField>