force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableDefaultingForProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableDefaultingForProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether defaulting is enabled for products</description>
    <inlineHelpText>A global setting to enable product defaulting rules.</inlineHelpText>
    <label>Enable Defaulting For Products</label>
    <type>Checkbox</type>
</CustomField>