force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableDefaultQuantityForABOItem__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableDefaultQuantityForABOItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether default quantity rules should be applied to ABO items</description>
    <inlineHelpText>Indicates whether default quantity rules should be applied to ABO items</inlineHelpText>
    <label>Enable Default Quantity For ABO Item</label>
    <type>Checkbox</type>
</CustomField>