force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableExternalPricing__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableExternalPricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether pricing will be done externally</description>
    <inlineHelpText>A global setting to enable external price calls. The external pricing call must be coded and associated with the reprice all button in the view cart page.</inlineHelpText>
    <label>Enable External Pricing</label>
    <type>Checkbox</type>
</CustomField>