force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableFastCloning__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableFastCloning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether fast cloning is enabled</description>
    <inlineHelpText>Indicates whether fast cloning is enabled.</inlineHelpText>
    <label>Enable Fast Cloning</label>
    <type>Checkbox</type>
</CustomField>