force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableFieldExpression__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableFieldExpression__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether field expressions are enabled</description>
    <inlineHelpText>A global setting to turn on field expressions.</inlineHelpText>
    <label>Enable Field Expressions</label>
    <type>Checkbox</type>
</CustomField>