force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableLocation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the location feature is enabled</description>
    <inlineHelpText>Indicates whether the location feature is enabled</inlineHelpText>
    <label>Enable Location</label>
    <type>Checkbox</type>
</CustomField>