force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableMatrixPricingForOptions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableMatrixPricingForOptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether matrix pricing is enabled for options</description>
    <inlineHelpText>A global setting to enable matrix pricing for options.</inlineHelpText>
    <label>Enable Matrix Pricing For Options</label>
    <type>Checkbox</type>
</CustomField>