force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableNotificationFeed__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableNotificationFeed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables notification feeds for notifications. Currently, this feature is enabled for quote collaboration notifications.</description>
    <inlineHelpText>Enables notification feeds for notifications. Currently, this feature is enabled for quote collaboration notifications.</inlineHelpText>
    <label>Enable Notification Feed</label>
    <type>Checkbox</type>
</CustomField>