force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnableOptionalItems__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableOptionalItems__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether items in the cart can be toggled as optional</description>
    <inlineHelpText>A global setting to enable optional items in the cart.</inlineHelpText>
    <label>Enable Optional Items</label>
    <type>Checkbox</type>
</CustomField>