force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnablePaginatedGrid__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnablePaginatedGrid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to specify whether pagination for cart grid is enabled</description>
    <inlineHelpText>Boolean flag to specify whether pagination for cart grid is enabled</inlineHelpText>
    <label>Enable Paginated Grid</label>
    <type>Checkbox</type>
</CustomField>