force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnablePriceRuleAuditTrail__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnablePriceRuleAuditTrail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether audit trail entries would be written to the Adjustment Line Item object for Price Rules applied to the Line Item</description>
    <inlineHelpText>Indicates whether audit trail entries would be written to the Adjustment Line Item object for Price Rules applied to the Line Item</inlineHelpText>
    <label>Enable Price Rule Audit Trail</label>
    <type>Checkbox</type>
</CustomField>