force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnablePriceRuleForABOItem__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnablePriceRuleForABOItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether price rule adjustments should be applied to ABO items</description>
    <inlineHelpText>Indicates whether price rule adjustments should be applied to ABO items</inlineHelpText>
    <label>Enable Price Rule For ABO Item</label>
    <type>Checkbox</type>
</CustomField>