force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__EnhancedSearchURL__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnhancedSearchURL__c</fullName>
    <description>Search URL end point for enhanced search. When it is blank native search is used.</description>
    <inlineHelpText>Enhanced search server URL, the valid URL format is &quot;https://search.apttuscloud.com&quot;</inlineHelpText>
    <label>Enhanced Search URL</label>
    <type>Url</type>
</CustomField>