force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ExcludeOptionalProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExcludeOptionalProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this flag to exclude optional products when evaluating structural requirements of bundles.</description>
    <inlineHelpText>Enable this flag to exclude optional products when evaluating structural requirements of bundles.</inlineHelpText>
    <label>Exclude Optional Products</label>
    <type>Checkbox</type>
</CustomField>