force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ExecuteRulesOnValidate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExecuteRulesOnValidate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this flag to execute all rules on validate click.</description>
    <inlineHelpText>Enable this flag to execute all rules on validate click.</inlineHelpText>
    <label>Execute Rules On Validate</label>
    <type>Checkbox</type>
</CustomField>